[tool.poetry]
name = "snscrape-examples"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]
readme = "README.md"
packages = [{include = "snscrape_examples"}]

[tool.poetry.dependencies]
python = "^3.8"
snscrape = "^0.6.2.20230320"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
